<resources>
    <string name="app_name">Sky Weather</string>
    <string name="current_conditions">Current Conditions</string>

    <string name="weather_image_content_description">Weather Image</string>
    <string name="back_button">Back Button</string>
    <string name="drop_of_water_content_description">Drop of water</string>

    <string name="temp_unit_C">°C</string>
    <string name="temp_unit_F">°F</string>

    <string name="precipitation_plain_text">Precipitation: %d%</string>
    <string name="favourites_plain_text">FAVOURITES</string>
    <string name="recent_plain_text">RECENT</string>
    <string name="edit_plain_text">Edit</string>
    <string name="clear_all_plain_text">Clear All</string>
    <string name="find_location_plain_text">Find Location</string>
    <string name="enable_location_services_plain_text">Enable Location Services</string>
    <string name="you_haven_t_added_any_locations_yet_plain_text">You haven\'t added any locations yet.</string>
    <string name="it_looks_like_your_recent_history_is_empty_plain_text">It looks like your recent history is empty.</string>
    <string name="current_plain_text">CURRENT</string>

    <string name="current">Current</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>

    <string name="refreshing_location">REFRESHING</string>
    <string name="location_is_needed_to_get_weather_forecast">Location is needed to get weather forecast</string>
    <string name="locations_plain_text">Locations</string>
    <string name="close_button_plain_text">Close Button</string>
    <string name="add_city_to_favourites_plain_text">Add City to Favourites</string>
    <string name="use_current_location_plain_text">Use Current Location</string>
    <string name="cancel_plain_text">Cancel</string>
    <string name="settings_plain_text">Settings</string>
    <string name="loading_plain_text">Loading</string>

    <string name="error_occured">Error occurred</string>
    <string name="no_network_availble_plain_text">No Network available</string>
    <string name="api_limit_exceeded_plain_text">"Api limit has been exceeded. Try again in an hour.</string>
    <string name="turn_location_on">Turn on location in your settings</string>

    <string name="temp_format">%s°</string>
    <string name="feelslike_format">FeelsLike %s°</string>
    <string name="humidity_format">Humidity: %s</string>

    <string name="hrs_format">%s hrs</string>
    <string name="mins_format">%s mins</string>
    <string name="c_plain_text">C</string>
    <string name="f_plain_text">F</string>
    <string name="see_weekly_outlook_plain_text">See Weekly Outlook→</string>
<!--    <string name="see_more_plain_text">See More →</string>-->
    <string name="see_more_plain_text">See More</string>
    <string name="current_conditions_plain_text">Current Conditions</string>
    <string name="set_plain_text">Set</string>
    <string name="rise_plain_text">Rise</string>
    <string name="today_s_details_plain_text">Today\'s Details</string>
    <string name="looking_ahead_plain_text">Looking Ahead →</string>
    <string name="allergy_outlook_plain_text">Allergy Outlook</string>
    <string name="open_menu_plain_text">Open Menu</string>
    <string name="in_24_hours_plain_text">In 24 hours</string>
    <string name="in_6_hours_plain_text">In 6 hours</string>
    <string name="in_1_hour_plain_text">In 1 hour</string>
    <string name="day_plain_text">Day</string>
    <string name="night_plain_text">Night</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imperial_plain_text">Imperial</string>
    <string name="units_plain_text">UNITS</string>
    <string name="f_mph_in_plain_text">°F, mph, in</string>
    <string name="metric_plain_text">Metric</string>
    <string name="c_kph_mm_plain_text">°C, kph, mm</string>
    <string name="wind_direction_plain_text">WIND DIRECTION</string>
    <string name="cardinal_plain_text">Cardinal</string>
    <string name="n_e_s_w_plain_text">N, E, S, W</string>
    <string name="degrees_plain_text">Degrees</string>
    <string name="_0_360_plain_text">0° - 360°</string>
    <string name="time_format_plain_text">TIME FORMAT</string>
    <string name="_12_hour_plain_text">12 Hour</string>
    <string name="_2_pm_3_pm_etc_plain_text">2 PM, 3 PM .etc</string>
    <string name="_24_hour_plain_text">24 Hour</string>
    <string name="_12_00_13_00_etc_plain_text">12:00, 13:00 .etc</string>
    <string name="display_mode_plain_text">DISPLAY MODE</string>
    <string name="light_plain_text">Light</string>
    <string name="dark_plain_text">Dark</string>
    <string name="black_plain_text">Black</string>
    <string name="enable_notifications_plain_text">Enable notifications</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="out_of_sync_widget_can_be_removed_plain_text">Out of sync. Widget can be removed</string>
    <string name="are_you_sure_you_want_to_clear_data_plain_text">Are you sure you want to clear data?</string>
    <string name="clear_data_plain_text">Clear data</string>
    <string name="widget_settings_plain_text">Widget Settings</string>
    <string name="location_plain_text">Location</string>
    <string name="background_transparency_plain_text">Background Transparency</string>
    <string name="_70_plain_text">70%</string>
    <string name="create_widget_plain_text">Create Widget</string>
    <string name="advertisement_plain_text">Advertisement</string>

    <string name="ad_attribution">Ad</string>
    <string name="rise">Rise</string>
    <string name="set">Set</string>
    <string name="advertisement">ADVERTISEMENT</string>
    <string name="select_location">Select Location</string>
    <string name="sky_weather_is_about_to_request_for_location_permission">Sky Weather is about to request for location permission</string>
    <string name="location_permission_reason">The permission will be used to determine the weather based on your current location</string>
    <string name="no_favourite_locations_selected_yet">No favourite locations selected yet</string>
    <string name="no_recent_locations_selected_yet">No recent locations selected yet</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="search_your_location">Search your location…</string>

    <string name="no_search_input">Start typing to see locations</string>
    <string name="open_settings">Open settings</string>
</resources>