<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.kotlinweatherapp.ui.find_location.FindLocationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:theme="@style/AppTheme.BlackTextColor"
        tools:context=".ui.find_location.FindLocationFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_grey_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/line_grey"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="@+id/search_query"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black"
                android:contentDescription="@string/close_button_plain_text" />

            <TextView
                android:id="@+id/location_plain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/locations_plain_text"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/close_btn" />

            <TextView
                android:id="@+id/temp_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/coda"
                android:text="@string/hourly_forecast_temp_unit_C"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/location_plain_text" />

            <Button
                android:id="@+id/search_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/find_location_background"
                android:drawableStart="@drawable/ic_search_black"
                android:drawableLeft="@drawable/ic_search_black"
                android:drawablePadding="14dp"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/find_location_plain_text"
                android:textAllCaps="false"
                android:textColorHint="@color/dark_black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close_btn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gps_location_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_query"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/gps_cardinal_direction_image"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:contentDescription="@string/drop_of_water_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dark_drop" />

                <TextView
                    android:id="@+id/gps_current_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/coda"
                    android:text="@string/current_plain_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintStart_toEndOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintTop_toTopOf="@+id/gps_cardinal_direction_image" />

                <TextView
                    android:id="@+id/gps_location_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/advent_pro_semibold"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toStartOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintTop_toBottomOf="@+id/gps_current_plain_text"
                    tools:text="Upper Hill" />

                <TextView
                    android:id="@+id/gps_location_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toStartOf="@+id/gps_location_city"
                    app:layout_constraintTop_toBottomOf="@+id/gps_location_city"
                    tools:text="Kenya" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/enable_location_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_query"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/enable_location_image"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="start|center_vertical"
                    android:contentDescription="@string/drop_of_water_content_description"
                    android:src="@drawable/dark_drop" />

                <TextView
                    android:id="@+id/enable_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/roboto"
                    tools:text="@string/enable_location_services_plain_text" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_grey_constraint_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/favourites_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/coda"
                    android:text="@string/favourites_plain_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/favourites_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/line_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_plain_text" />

                <TextView
                    android:id="@+id/empty_favourite_list_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/you_haven_t_added_any_locations_yet_plain_text"
                    android:textColor="@color/color_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_line" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favourite_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_line" />

                <TextView
                    android:id="@+id/recent_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/coda"
                    android:text="@string/recent_plain_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourite_recycler_view" />

                <View
                    android:id="@+id/recent_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/line_grey"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_plain_text" />

                <TextView
                    android:id="@+id/empty_recent_list_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/it_looks_like_your_recent_history_is_empty_plain_text"
                    android:textColor="@color/color_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_line" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_line" />

                <TextView
                    android:id="@+id/edit_favourites_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="4dp"
                    android:text="@string/edit_plain_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/favourites_plain_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favourites_plain_text" />

                <TextView
                    android:id="@+id/clear_recent_history_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="4dp"
                    android:text="@string/clear_all_plain_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/recent_plain_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recent_plain_text" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>